petclinic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  labels:
    app: petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: 13.209.194.142:8000/harbor/projects/3/repositories/spring-petclinic-restt:latest
        ports:
        - containerPort: 9966
      imagePullSecrets:
      - name: harbor-credentials
